# ProjectArchetypes

./: LICENSE
modern-cpp-archetype/: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
modern-cpp-archetype/.devcontainer/: Dockerfile  devcontainer.json
modern-cpp-archetype/src/: main.cpp
qnx-application-archetype/: CMakeLists.txt  conanfile.py
qnx-application-archetype/.devcontainer/: Dockerfile  devcontainer.json  docker_entrypoint.sh
qnx-application-archetype/.devcontainer/conan_profiles/: default  qnx
qnx-application-archetype/config/: qemu_virt.build  rpi_image.build
vxworks-application-archetype/: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
vxworks-application-archetype/.devcontainer/: Dockerfile  devcontainer.json
